# rust-server

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: post.rs
src/models/: mod.rs
