[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-web = "^4"
env_logger = "0.8"
derive_more = "^0.99"
serde = { version = "^1", features = ["derive"] }